--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Backbone</title>
-  <%= include_stylesheets :application, :media => 'all' %>
-  <%= include_javascripts :core, :initializers, :helpers, :templates, :application %>
+  <%= stylesheet_link_tag 'application' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tag %>
   </head>
 <body>
